--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,22 @@
 {
   "name": "simple-router",
+  "description": "Simple router based on Polymer 1.0",
   "version": "0.1.0",
   "license": "MIT",
+  "authors": "Gerardo Lugo <gerard1014>"
+  "keywords": [
+    "web-components",
+    "polymer",
+    "simple",
+    "router"
+  ],
+  "main": "simple-router.html",
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/gerard1014/simple-router.git"
+  },
+  "homepage": "https://github.com/gerard1014/simple-router",
   "ignore": [
     "**/.*",
     "node_modules",
